# speed-agro

./: .gitignore  README.md  description.txt  docker-compose.yml  next-steps.txt  notes.txt
database/: speed_agro.sql
database-backup/: Datos_F01.BAK  Datos_F02.BAK  Datos_F03.BAK  Datos_F04.BAK  Datos_TKs.BAK  Descarga.BAK
database-production/: Datos_Envasado.bak  Datos_F01.bak  Datos_F02.bak  Datos_F03.bak  Datos_F04.bak  Datos_TKs.bak  Descarga.bak
database/csv/: descargas.csv  envasado.csv  formulador_tab_1.csv  formulador_tab_2.csv  tags.csv
database/excel/: Pruebas SQL-Envasado.xlsx  Pruebas SQL-Formulador 1.xlsx  Pruebas SQL_Descargas.xlsx
database/sql/: create-tables.sql
frontend/: README.md  bun.lockb  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: variables.styl
frontend/src/components/: ReportView.vue
frontend/src/helpers/: api.helpers.ts
frontend/src/router/: index.ts
frontend/src/types/: envasado.model.ts  formulador.model.ts  general.type.ts
manual/: querys.txt  summary.txt
tauri/: bun.lockb  package.json  vite.config.ts
tauri/src/: App.vue  main.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs
tauri/src/helpers/: api-envasado.helpers.ts  api-formulador.helpers.ts  api.helpers.ts  date.helpers.ts  download.helper.ts  query.helpers.ts  report.helpers.ts
tauri/src/i18n/: i18n.ts
tauri/src/stores/: data-to-report.ts
tauri/src/types/: descarga.model.ts  general.type.ts
test-connection/: connection-local.py  connection.py  miconection.js
(+18 files in other folders)
